--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "About"
 ---
 <div class="about">
   <h1>About</h1>
-  <h2><a href=""><i>Emperor of the Moon</i></a></h2>
+  <h2><a href="https://digbmc.github.io/emperor-moon/playtext/"><i>Emperor of the Moon</i></a></h2>
   <p>Written by Aphra Behn; adapted for the stage by Molly Ward</p>
 
 </div>
