--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: "About"
 <div class="toc">
     <h2>Dramaturgy</h2>
   <ul class="texts">
-  {% for item in site.articles %}
+  {% for item in site.posts %}
 
     <li class="text-title">
       <a href="{{ site.baseurl }}{{ item.url }}">
