playbill, sidebar, css to customize

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "About"
 <div class="about">
   <h1>About</h1>
   <h2><a href="https://digbmc.github.io/emperor-moon/playtext/"><i>Emperor of the Moon</i></a></h2>
-  <p>Written by Aphra Behn; adapted for the stage by Molly Ward</p>
+  <p>Written by Aphra Behn; a new adaptation by Molly Ward</p>
 
 </div>
 
