--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: "About"
+title: About
+published: true
 ---
 <div class="about">
   <h1>About</h1>
@@ -12,10 +13,8 @@ title: "About"
 
 <hr>
 
-<iframe src="https://archive.org/embed/emperorofmoonfar00behn" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-
 <div class="toc">
-    <h2>Dramaturgy</h2>
+    <h2>Posts</h2>
   <ul class="texts">
   {% for item in site.posts %}
 
