updating instructions, editing home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ title: About
 published: true
 ---
 <div class="about">
-  <h1>About</h1>
-  <h2><a href="https://digbmc.github.io/emperor-moon/playtext/"><i>Emperor of the Moon</i></a></h2>
-  <p>Written by Aphra Behn; a new adaptation by Molly Ward</p>
+  <h1>The play</h1>
+  <h2><i>The Emperor of the Moon: A Farce.</i> by Aphra Behn (1687)</h2>
+  <p><a href="https://digital.library.upenn.edu/women/behn/emperor/emperor.html">Read the text</a> of the 1687 edition or <a href="https://archive.org/embed/emperorofmoonfar00behn">view a facsimile</a></p>
+
+  <h2><a href="https://digbmc.github.io/emperor-moon/playtext/"><i>Emperor of the Moon</i>, adapted by Molly Ward (2020)</a></h2>
 
 </div>
 
